--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,14 @@
     </form>
     <h1>{{ a }}</h1>
     </div>
+    <div class="saved_urls">
+    <h3>Saved urls in database</h3>
+    <ul>
+        {% for i in saved_urls %}
+        <li>{{ i.long_url }} : {{  i.short_url }}</li>
+        {% endfor %}
+    </ul>
+    </div>
 </body>
 </html>
 
